--- a/nextstore/jsconfig.json
+++ b/nextstore/jsconfig.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@pages/*": ["pages/*"],
+      "@pages/*": ["templates/*"],
       "@components/*": ["components/*"],
       "@containers/*": ["containers/*"],
       "@context/*": ["context/*"],
